[package]
name = "myipinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
argh = "0.1.10"
dns-lookup = "2.0.2"
geoip2 = "0.1.6"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
