[package]
name = "ipinfo"
version = "0.1.0"
edition = "2021"
authors = ["Tobias Frei"]
description = "Emulate some of the behaviour of `curl ipinfo.io/<ipaddr>`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "s"
lto=true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", default-features = false, features = ["cargo", "error-context", "help", "std"] }
custom_error = "1.9.2"
dns-lookup = "2.0.2"
geoip2 = "0.1.6"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
